Made som small changes and links correct at edit modules and delete modules.

--- a/LMS-Lexicon/Views/Teacher/CreateUserPartial.cshtml
+++ b/LMS-Lexicon/Views/Teacher/CreateUserPartial.cshtml
@@ -77,10 +77,10 @@
                         <!--Modal Footer Start-->
                     </div>
                     <div class="modal-footer">
-                        <button data-dismiss="modal" id="cancel" class="btn btn-default" type="button">Cancel</button>
+                        <button data-dismiss="modal" id="cancel" class="btn btn-default" type="button">Avbryt</button>
                         <button class="btn btn-success relative" id="btnSubmit" type="submit">
                             <i class="loader"></i>
-                            Skicka
+                            Lägg till
                         </button>
                     </div> <!--Modal Footer End-->
                 </form>
