--- a/LMS-Lexicon/Views/Modules/Edit.cshtml
+++ b/LMS-Lexicon/Views/Modules/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 <br/>
-<h1>Ändra</h1>
-
-<h4>Modul</h4>
+<h3>Ändra modul</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -40,14 +38,14 @@
                 <span asp-validation-for="CourseId" class="text-danger"></span>
             </div>*@
             <div class="form-group">
-                <input type="submit" value="Edit" class="btn btn-primary" />
+                <input type="submit" value="Ändra" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId"><i class="fas fa-list-alt fa-lg"></i></a>
 </div>
 
 @section Scripts {
