--- a/LMS-Lexicon/Views/Teacher/Index.cshtml
+++ b/LMS-Lexicon/Views/Teacher/Index.cshtml
@@ -23,6 +23,7 @@
     <partial name="UsersPartial" model="@Model.UserList" />
 </div>
 @section Scripts {
+    <script src="~/js/site.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 
