Changed GenratedDtos namespace

--- a/LMS-Lexicon/Views/Api/LiteratureIndex.cshtml
+++ b/LMS-Lexicon/Views/Api/LiteratureIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LMS_Lexicon.Models.LiteratureDto>
+﻿@model IEnumerable<LMS_Lexicon.Core.Models.LiteratureDto>
 
 @{
     ViewData["Title"] = "API Literature View";
