--- a/LMS-Lexicon/Views/Api/Index.cshtml
+++ b/LMS-Lexicon/Views/Api/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LMS_Lexicon.Models.AuthorsDto>
+﻿@model IEnumerable<LMS_Lexicon.Core.Models.AuthorsDto>
 
 @{
     ViewData["Title"] = "API-View";
