--- a/LMS-Lexicon/Views/Courses/Index.cshtml
+++ b/LMS-Lexicon/Views/Courses/Index.cshtml
@@ -5,10 +5,10 @@
 }
 <br/>
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-9 col-lg-10">
         <h2>Kurser</h2>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-3 col-lg-2">
         <a asp-action="Create" class="btn btn-success text-white"> Lägg till kurs <i class="fa fa-plus"></i></a>
     </div>
 </div>
