--- a/LMS-Lexicon/Views/Teacher/UsersPartial.cshtml
+++ b/LMS-Lexicon/Views/Teacher/UsersPartial.cshtml
@@ -4,18 +4,27 @@
     var UserSuccess = TempData["UserSuccess"];
 }
 
-@{ if (Model.FirstOrDefault().Role == "Student")
-    {<h2>Studenter</h2>
-        <br />
-        <p>
-            <a asp-action="CreateUser" asp-route-role="Student" class="btn btn-success text-white popup" data-ajax="true" data-ajax-method="GET" data-ajax-success="success" data-ajax-update="#addUser" data-ajax-mode="replace"> Lägg till student <i class="fa fa-plus"></i></a>
-        </p>}
+@{if (Model.FirstOrDefault().Role == "Student")
+    {
+    <div class="row">
+        <div class="col-sm-7 col-md-8 col-lg-9">
+            <h2>Studenter</h2>
+        </div>
+        <div class="col-sm-5 col-md-4 col-lg-3">
+            <a asp-action="CreateUser" asp-route-role="Student" class="btn btn-success text-white popup" data-ajax="true" data-ajax-method="GET" data-ajax-success="success" data-ajax-update="#addUser" data-ajax-mode="replace">Lägg till student <i class="fa fa-plus"></i></a>
+        </div>
+    </div>
+    }
     else
-    { <h2>Lärare</h2>
-        <br />
-        <p>
-            <a asp-action="CreateUser" asp-route-role="Teacher" class="btn btn-success text-white popup" data-ajax="true" data-ajax-method="GET" data-ajax-success="success" data-ajax-update="#addUser" data-ajax-mode="replace"> Lägg till lärare <i class="fa fa-plus"></i></a>
-        </p>
+    {
+        <div class="row">
+            <div class="col-md-9">
+                <h2>Lärare</h2>
+            </div>
+            <div class="col-md-3">
+                <a asp-action="CreateUser" asp-route-role="Teacher" class="btn btn-success text-white popup" data-ajax="true" data-ajax-method="GET" data-ajax-success="success" data-ajax-update="#addUser" data-ajax-mode="replace"> Lägg till lärare <i class="fa fa-plus"></i></a>
+            </div>
+        </div>
     }
 }
 
