--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -65,13 +65,13 @@
                         <div class="card">
 
                             <div class="card-header" id="headingFive">
-                                @*<h5 class="mb-0">*@
+                                <h5 class="mb-0">
 
                                     <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                                         @module.Name
                                     </button>
 
-                                @*</h5>*@
+                                </h5>
 
                             </div>
                             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
