Delete Activity fix TB/Sunisa

--- a/LMS-Lexicon/Views/Activities/Delete.cshtml
+++ b/LMS-Lexicon/Views/Activities/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model LMS_Lexicon.Core.Models.Entities.Activity
+﻿@model ActivityViewModel
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+@*<h1>Tabort</h1>*@
+<br/>
+<h4>Är du säker på att du vill ta bort den här Aktivitet?</h4>
 <div>
-    <h4>Activity</h4>
+    @*<h4>Aktivitet</h4>*@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -35,23 +35,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ActivityType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ActivityType.Name)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Module)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Module.Name)
-        </dd class>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="@Model.CourseId" />
+        <input type="hidden" asp-for="@Model.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+
+        <a asp-action="Details" asp-controller="Courses" asp-route-Id="@Model.CourseId"><i class="fas fa-list-alt fa-lg"></i></a>
     </form>
 </div>
