First try width Edit Activities

--- a/LMS-Lexicon/Views/Activities/Create.cshtml
+++ b/LMS-Lexicon/Views/Activities/Create.cshtml
@@ -33,12 +33,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="ActivityTypeId" class="col-form-label"></label>
-                <div class="col-sm-10">
-                    <select asp-for="ActivityTypeId" asp-items="@await typeSelect.GetActivityTypeAsync()" class="form-control">
-                        <option selected="selected" value="">-- Välj aktivitetstyp --</option>
-                    </select>
-                    <span asp-validation-for="ActivityTypeId" value="@Model.CourseId" class="text-danger"></span>
-                </div>
+                <select asp-for="ActivityTypeId" asp-items="@await typeSelect.GetActivityTypeAsync()" class="form-control">
+                    <option selected="selected" value="">-- Välj aktivitetstyp --</option>
+                </select>
+                <span asp-validation-for="ActivityTypeId" value="@Model.CourseId" class="text-danger"></span>
             </div>
             <input asp-for="ModuleId" type="hidden" class="form-control" />
             <input asp-for="CourseId" type="hidden" class="form-control" />
@@ -49,7 +47,7 @@
     </div>
 </div>
 <div>
-    <a asp-action="Details" asp-controller="Courses" asp-route-Id="@Model.CourseId"><i class="fas fa-list-alt fa-lg"></i></a>
+    <a asp-action="Details" asp-controller="Courses" asp-route-Id="@Model.CourseId" asp-route-expandedModule="true"><i class="fas fa-list-alt fa-lg"></i></a>
 </div>
 
 @section Scripts {
