--- a/LMS-Lexicon/Views/Modules/Delete.cshtml
+++ b/LMS-Lexicon/Views/Modules/Delete.cshtml
@@ -44,6 +44,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Ta bort" class="btn btn-danger" /> |
-        <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId"><i class="fas fa-list-alt fa-lg"></i></a>
+        <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId" asp-route-expandedModule="true"><i class="fas fa-list-alt fa-lg"></i></a>
     </form>
 </div>
