--- a/LMS-Lexicon/Views/Modules/Edit.cshtml
+++ b/LMS-Lexicon/Views/Modules/Edit.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId"><i class="fas fa-list-alt fa-lg"></i></a>
+    <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId" asp-route-expandedModule="true"><i class="fas fa-list-alt fa-lg"></i></a>
 </div>
 
 @section Scripts {
