--- a/LMS-Lexicon/Views/Activities/Edit.cshtml
+++ b/LMS-Lexicon/Views/Activities/Edit.cshtml
@@ -1,12 +1,11 @@
-﻿@model LMS_Lexicon.Core.Models.Entities.Activity
+﻿@model ActivityViewModel
+@inject IActivityTypeSelectService typeSelect
 
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Edit</h1>
-
-<h4>Activity</h4>
+<br/>
+<h4>Ändra aktivitet</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,15 +33,14 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ActivityTypeId" class="control-label"></label>
-                <select asp-for="ActivityTypeId" class="form-control" asp-items="ViewBag.ActivityTypeId"></select>
-                <span asp-validation-for="ActivityTypeId" class="text-danger"></span>
+                <label asp-for="ActivityTypeId" class="col-form-label"></label>
+                <select asp-for="ActivityTypeId" asp-items="@await typeSelect.GetActivityTypeAsync()" class="form-control">
+                    <option selected="selected" value="">-- Välj aktivitetstyp --</option>
+                </select>
+                <span asp-validation-for="ActivityTypeId" value="@Model.CourseId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ModuleId" class="control-label"></label>
-                <select asp-for="ModuleId" class="form-control" asp-items="ViewBag.ModuleId"></select>
-                <span asp-validation-for="ModuleId" class="text-danger"></span>
-            </div>
+            <input asp-for="ActivityId" type="hidden" class="form-control" />
+            <input asp-for="CourseId" type="hidden" class="form-control" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
