--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -48,30 +48,31 @@
                 </button>
             </h2>
         </div>
-        <div id="collapseThree" class="collapse @(ViewBag.ShowModule ? "show" :"")" aria-labelledby="headingThree" data-parent="#accordionExample">
+        <div id="collapseThree" class="collapse @(ViewBag.ShowModule ? "show" : "")" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div id="accordion">
 
-                @foreach (var module in Model.Modules)
 
+                @foreach (var module in Model.Modules)
                 {
+                    string modid = String.Concat(module.Name.Where(c => Char.IsLetter(c))); 
                     <div class="card">
                         <div class="card-header" id="headingFive">
                             <div class="row">
                                 <div class="col-md-8 col-lg-9">
-                                    <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                        @module.Name
+                                    <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#@modid" aria-expanded="false" aria-controls="@modid">
+                                        @module.Name 
                                     </button>
                                     &nbsp;<a asp-action="Edit" asp-controller="Modules" asp-route-moduleId="@module.Id"><i class="fas fa-edit"></i></a> |
                                     <a asp-action="Delete" asp-controller="Modules" asp-route-Id="@module.Id"><i class="fas fa-trash-alt"></i></a>
                                 </div>
                                 <div class="col-md-4 col-lg-3 float-right">
-                                    <a asp-action="Create" asp-controller="Activities" asp-route-courseId="@module.CourseId"  asp-route-moduleId="@module.Id" class="btn btn-success btn-sm text-white"> Lägg till Aktivitet <i class="fa fa-plus"></i></a>
+                                    <a asp-action="Create" asp-controller="Activities" asp-route-courseId="@module.CourseId" asp-route-moduleId="@module.Id" class="btn btn-success btn-sm text-white"> Lägg till Aktivitet <i class="fa fa-plus"></i></a>
                                     &nbsp;<a asp-action="Edit" asp-controller="Activities" asp-route-moduleId="@module.Id"><i class="fas fa-edit"></i></a> |
                                     <a asp-action="Delete" asp-controller="Activities" asp-route-Id="@module.Id"><i class="fas fa-trash-alt"></i></a>
                                 </div>
                             </div>
                         </div>
-                        <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                        <div id="@modid" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-4">
