--- a/LMS-Lexicon/Views/Shared/_Layout.cshtml
+++ b/LMS-Lexicon/Views/Shared/_Layout.cshtml
@@ -32,22 +32,23 @@
                         <a class="nav-link" asp-area="" asp-controller="Courses" asp-action="Index">Kurser</a>
                     </li>
                 }
+
+                @*@if (User.IsInRole("Teacher"))//William
+        {*@
+                <li class="nav-item px-md-4">
+                    <a class="nav-link" asp-area="" asp-controller="Api" asp-action="Index">Författare</a>
+                </li>
+                //}
+                @*@if (User.IsInRole("Teacher"))//William
+        {*@
+                <li class="nav-item px-md-4">
+                    <a class="nav-link" asp-area="" asp-controller="Api" asp-action="LiteratureIndex">Litteratur</a>
+                </li>
+                @*}*@
                 @if (User.IsInRole("Teacher"))
                 {
                     <li class="nav-item px-md-4">
                         <a class="nav-link" asp-area="" asp-controller="Teacher" asp-action="Index">Användare</a>
-                    </li>
-                }
-                @if (User.IsInRole("Teacher"))//William
-                {
-                    <li class="nav-item px-md-4">
-                        <a class="nav-link" asp-area="" asp-controller="Api" asp-action="Index">Författare</a>
-                    </li>
-                }
-                @if (User.IsInRole("Teacher"))//William
-                {
-                    <li class="nav-item px-md-4">
-                        <a class="nav-link" asp-area="" asp-controller="Api" asp-action="LiteratureIndex">Litteratur</a>
                     </li>
                 }
             </ul>
