Modules and activities for Students

--- a/LMS-Lexicon/Views/Api/LiteratureIndex.cshtml
+++ b/LMS-Lexicon/Views/Api/LiteratureIndex.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "API Literature View";
 }
-
-<h1>Api Literature View</h1>
+<br/>
+<h1>Literatur</h1>
 
 @*<p>
         <a asp-action="Create">Create New</a>
