Deleted registry button before loggedin

--- a/LMS-Lexicon/Views/Shared/_LoginPartial.cshtml
+++ b/LMS-Lexicon/Views/Shared/_LoginPartial.cshtml
@@ -23,9 +23,9 @@
     }
     else
     {
-        <li class="nav-item py-md-2 px-md-2">
+        @*<li class="nav-item py-md-2 px-md-2">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Registrera</a>
-        </li>
+        </li>*@
         <li class="nav-item py-md-2 px-md-2">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Logga in</a>
         </li>
