--- a/LMS-Lexicon/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LMS-Lexicon/Areas/Identity/Pages/Account/Login.cshtml
@@ -34,11 +34,11 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
-                </div>
+                </div>*@
             </form>
         </section>
     </div>
